@@ -14,6 +14,18 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Rewrite NPC communication system. See doc/objects 'J. NPC's Speak out' for more information,
+or check doc/Developers/dialog.dox, or the maps/test/say map.
+ common/loader.l Makefile.am object.c
+ doc/Developers/mainpage.dox objects
+ include/define.h Makefile.am object.h libproto.h typesproto.h
+ server/c_chat.c monster.c
+New files:
+ common/dialog.c 
+ doc/Developers/dialog.dox
+ include/dialog.h
+Nicolas Weeger 2008-05-11
+
 Add 'move_to' function, that can be used later on for eg plugins
 (should replace Python's CFMove).
  include/sproto.h
